# pytest-call-checker

./: .pre-commit-config.yaml  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml
htmlcov/: class_index.html  d_61f6ee33ef142c56___init___py.html  function_index.html  index.html  status.json  z_61f6ee33ef142c56___init___py.html
pytest_call_checker/: __init__.py
tests/: test_checker.py  test_examples.py  test_meta.py
