[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "pytest-call-checker"
version = "0.0.0"
description = "Small pytest utility to easily create test doubles"
authors = ["Joachim Jablon <ewjoachim@gmail.com>"]
license = "MIT License"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
keywords = ["pytest"]
repository = "https://github.com/ewjoachim/pytest-call-checker"
packages = [{include = "pytest_call_checker"}]

[tool.poetry.plugins."pytest11"]
pytest_call_checker = "pytest_call_checker"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"

[tool.poetry.group.lint.dependencies]
ruff = "*"
pyright = "*"

[tool.poetry.group.tests.dependencies]
pytest-cov = "*"

[tool.poetry.group.example.dependencies]
httpx = "*"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '(?P<base>\d+\.\d+\.\d+)'

[tool.pytest.ini_options]
addopts = """
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=pytest_call_checker -vv --strict-markers -rfE
"""
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "coverage: exclude",
    "if TYPE_CHECKING:",
    "^ +\\.\\.\\.$",
]

[tool.ruff]
extend-exclude = [".venv"]

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "RUF", # ruff
]
fixable = ["ALL"]
extend-ignore = [
    "E501", # line too long
    # It's not exactly false but it's not supported enough by our dependencies,
    # so ruff is fighting with Pyright on this.
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
exclude = ["tests", ".venv"]
